--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
       # this will generate a document with question marks in place of unknown references
       - pdflatex -interaction batchmode main.tex
       # this will parse all the .bib files that were included in the article and generate metainformation regarding references
-      - bibtex- main.aux
+      - bibtex main.aux
       # this will generate document with all the references in the correct places
       - pdflatex -interaction batchmode -draftmode main.tex
       # just in case if adding references broke page numbering somewhere
